--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starting template for projects utilizing webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack serve --open"
   },
@@ -15,6 +15,7 @@
     "@babel/core": "^7.22.11",
     "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.4",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
